<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qube_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="143501123+espenakk@users.noreply.github.com">rune</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>qube_driver</depend>
  
  <export>
    <build_type>ament_python</build_type>
    <launch>launch</launch>
  </export>
</package>
